--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -14,11 +14,11 @@
                                 <h1>Shop Smart, Get Free Delivery in 24 Hours!</h1>
                                 <p>Experience the convenience of shopping from home with lightning-fast, free delivery on all orders. Quality products, exceptional service, and no delays—just for you!</p>
                                 <div class="banner-btn">
-                                    <a class="btn btn-inline" href="shop-4column.html">
+                                    <a class="btn btn-inline"  href="/products">
                                         <i class="fas fa-shopping-basket"></i>
                                         <span>shop now</span>
                                     </a>
-                                    <a class="btn btn-outline" href="offer.html">
+                                    <a class="btn btn-outline" href="#">
                                         <i class="icofont-sale-discount"></i>
                                         <span>get offer</span>
                                     </a>
@@ -27,7 +27,7 @@
                         </div>
                         <div class="col-md-6 col-lg-6">
                             <div class="banner-img">
-                                <img src="images/home/index/01.png" alt="index">
+                                <img src="{% static 'en/images/home/index/banner_1.png'%}" alt="index">
                             </div>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6 col-lg-6">
                             <div class="banner-img">
-                                <img src="images/home/index/02.png" alt="index">
+                                <img src="{% static 'en/images/home/index/banner_2.png'%}" alt="index">
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-6">
@@ -47,11 +47,11 @@
                                 <p>Shop your favorite items now and enjoy free delivery right to your doorstep within 24 hours. Because you deserve speed and convenience!</p>
 
                                 <div class="banner-btn">
-                                    <a class="btn btn-inline" href="shop-4column.html">
+                                    <a class="btn btn-inline" href="/products">
                                         <i class="fas fa-shopping-basket"></i>
                                         <span>shop now</span>
                                     </a>
-                                    <a class="btn btn-outline" href="offer.html">
+                                    <a class="btn btn-outline" href="#">
                                         <i class="icofont-sale-discount"></i>
                                         <span>get offer</span>
                                     </a>
