--- a/templates/base.html
+++ b/templates/base.html
@@ -130,7 +130,7 @@
                 <div class="header-content">
                     <div class="header-media-group">
                         <button class="header-user"><img src="{% static 'en/images/user.png'%}" alt="user"></button>
-                        <a href="#"><img src="{% static 'en/images/logo.png'%}" alt="logo"></a>
+                        <a href="#"><img src="{% static 'en/images/yuva_logo.png'%}" alt="logo"></a>
                         <button class="header-src"><i class="fas fa-search"></i></button>
                     </div>
 
@@ -348,33 +348,16 @@
                 </div>
                 <ul class="nav-list">
                     <li>
-                        <a class="nav-link dropdown-link" href="#"><i class="icofont-home"></i>Home</a>
-                        <ul class="dropdown-list">
-                            <li><a href="#">Home grid</a></li>
-                            <li><a href="#">Home index</a></li>
-                            <li><a href="#">Home classic</a></li>
-                            <li><a href="#">Home standard</a></li>
-                            <li><a href="#">Home category</a></li>
-                        </ul>
+                        <a class="nav-link " href="/"><i class="icofont-home"></i>Home</a>
+                    
                     </li>
                     <li>
-                        <a class="nav-link dropdown-link" href="#"><i class="icofont-food-cart"></i>shop</a>
-                        <ul class="dropdown-list">
-                            <li><a href="#">shop 5 column</a></li>
-                            <li><a href="#">shop 4 column</a></li>
-                            <li><a href="#">shop 3 column</a></li>
-                            <li><a href="#">shop 2 column</a></li>
-                            <li><a href="#">shop 1 column</a></li>
-                        </ul>
+                        <a class="nav-link " href="/products"><i class="icofont-food-cart"></i>shop</a>
+                    
                     </li>
                     <li>
-                        <a class="nav-link dropdown-link" href="#"><i class="icofont-page"></i>product</a>
-                        <ul class="dropdown-list">
-                            <li><a href="#">product tab</a></li>
-                            <li><a href="#">product grid</a></li>
-                            <li><a href="#">product video</a></li>
-                            <li><a href="#">product simple</a></li>
-                        </ul>
+                        <a class="nav-link " href="/products/brands/"><i class="icofont-page"></i>Brands</a>
+                      
                     </li>
                     <li>
                         <a class="nav-link dropdown-link" href="#"><i class="icofont-bag-alt"></i>my account</a>
@@ -382,39 +365,39 @@
                             <li><a href="#">profile</a></li>
                             <li><a href="#">wallet</a></li>
                             <li><a href="#">wishlist</a></li>
-                            <li><a href="#">compare</a></li>
                             <li><a href="#">checkout</a></li>
                             <li><a href="#">order history</a></li>
-                            <li><a href="#">order invoice</a></li>
-                            <li><a href="#">email template</a></li>
+                        
                         </ul>
                     </li>
                     <li>
                         <a class="nav-link dropdown-link" href="#"><i class="icofont-lock"></i>authentication</a>
                         <ul class="dropdown-list">
-                            <li><a href="#">login</a></li>
-                            <li><a href="#">register</a></li>
-                            <li><a href="#">reset password</a></li>
-                            <li><a href="#">change password</a></li>
+                            <li><a href="{% url 'login'%}">login</a></li>
+                            <li><a href="{% url 'accounts:signup'%}">register</a></li>
+                            <li><a href="{% url 'password_reset' %}">reset password</a></li>
+                           
                         </ul>
                     </li>
                     <li>
-                        <a class="nav-link dropdown-link" href="#"><i class="icofont-book-alt"></i>blogs</a>
-                        <ul class="dropdown-list">
-                            <li><a href="blog-grid.html">blog grid</a></li>
-                            <li><a href="blog-standard.html">blog standard</a></li>
-                            <li><a href="blog-details.html">blog details</a></li>
-                            <li><a href="blog-author.html">blog author</a></li>
-                        </ul>
+                        <a class="nav-link " href="/orders"><i class="icofont-book-alt"></i>Orders</a>
+                       
                     </li>
                     <li><a class="nav-link" href="#"><i class="icofont-sale-discount"></i>offers</a></li>
                     <li><a class="nav-link" href="#"><i class="icofont-info-circle"></i>about us</a></li>
                     <li><a class="nav-link" href="#"><i class="icofont-support-faq"></i>need help</a></li>
                     <li><a class="nav-link" href="#"><i class="icofont-contacts"></i>contact us</a></li>
                     <li><a class="nav-link" href="#"><i class="icofont-warning"></i>privacy policy</a></li>
-                    <li><a class="nav-link" href="#"><i class="icofont-options"></i>coming soon</a></li>
-                    <li><a class="nav-link" href="#"><i class="icofont-ui-block"></i>404 error</a></li>
-                    <li><a class="nav-link" href="#"><i class="icofont-logout"></i>logout</a></li>
+
+                    {% if user.is_authenticated %}
+                    <li><a class="nav-link" href="#"><i class="icofont-logout"></i>Logout </a></li>
+                        
+                    {% else %}
+                    <li><a class="nav-link" href="{% url 'login' %}"><i class="icofont-logout"></i>Login</a></li>
+                     
+                    {% endif %}
+
+                   
                 </ul>
                 <div class="nav-info-group">
                     <div class="nav-info">
@@ -446,7 +429,7 @@
                     MOBILE-MENU PART START
         =======================================-->
         <div class="mobile-menu">
-            <a href="#" title="Home Page">
+            <a href="/" title="Home Page">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
@@ -457,7 +440,7 @@
             <button class="cart-btn" title="Cartlist">
                 <i class="fas fa-shopping-basket"></i>
                 <span>cartlist</span>
-                <sup>9+</sup>
+                <sup>{{cart_detail_data|length}}</sup>
             </button>
             <a href="#" title="Wishlist">
                 <i class="fas fa-heart"></i>
@@ -465,9 +448,9 @@
                 <sup>0</sup>
             </a>
             <a href="#" title="Compare List">
-                <i class="fas fa-random"></i>
+                <i class="fas fa-user"></i>
                 <span>Profile</span>
-                <sup>0</sup>
+               
             </a>
         </div>
         <!--=====================================
