--- a/product/templates/product/brand_detail.html
+++ b/product/templates/product/brand_detail.html
@@ -15,8 +15,8 @@
             <div class="container">
                 <h2>{{brand}}</h2>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">brand-list</a></li>
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/products/brands/">brand-list</a></li>
                     <li class="breadcrumb-item active" aria-current="#">{{brand}}</li>
                 </ol>
             </div>
