--- a/product/templates/product/brand_list.html
+++ b/product/templates/product/brand_list.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <h2>brand list</h2>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">brand-list</li>
                 </ol>
             </div>
@@ -40,14 +40,14 @@
                                 </select>
                             </div>
                             <div class="filter-short">
-                                <label class="filter-label">Short by :</label>
+                                <label class="filter-label">Sort by :</label>
                                 <select class="form-select filter-select isotope-select">
                                     <option value="*">show all</option>
-                                    <option value=".vegetables">vegetables</option>
-                                    <option value=".fruits">fruits</option>
-                                    <option value=".drinks">drinks</option>
-                                    <option value=".fishes">fishes</option>
-                                    <option value=".meats">meats</option>
+                                    <option value=".vegetables">Most Sold</option>
+                                    <option value=".fruits">New</option>
+                                    <option value=".drinks">Onsale</option>
+                                    <option value=".fishes">featured</option>
+                                    <option value=".meats">Brand</option>
                                 </select>
                             </div>
                         </div>
