--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -13,8 +13,8 @@
             <div class="container">
                 <h2>{{ object.name }}</h2>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="shop-4column.html">shop-4column</a></li>
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/products/brands/{{object.brand.slug}}">{{ object.brand }}</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ object.name }}</li>
                 </ol>
             </div>
