--- a/templates/base.html
+++ b/templates/base.html
@@ -771,7 +771,7 @@
                                     <li><a href="#">Location</a></li>
                                     <li><a href="#">Affiliates</a></li>
                                     <li><a href="#">Contact</a></li>
-                                    <li><a href="#">Carrer</a></li>
+                                    <li><a href="#">Career</a></li>
                                     <li><a href="#">Faq</a></li>
                                 </ul>
                             </div>
@@ -791,7 +791,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="footer-bottom">
-                            <p class="footer-copytext">&copy;  All Copyrights Reserved by <a target="_blank" href="https://innovationhubsoftwaresltd.com">InnvationHub softwares</a></p>
+                            <p class="footer-copytext">&copy;  All Copyrights Reserved by <a target="_blank" href="https://innovationhubsoftwaresltd.com">InnovationHub softwares</a></p>
                             <div class="footer-card">
                                 <a href="#"><img src="{% static 'en/images/payment/mpesa.png'%}" alt="payment"></a>
                                 <a href="#"><img src="{% static 'en/images/payment/pay-visa.png'%}" alt="payment"></a>
