--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -8,7 +8,7 @@
             <div class="container">
                 <h2>Online Drip store</h2>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">thrifty</li>
                 </ol>
             </div>
@@ -164,63 +164,63 @@
                             </form>
                         </div>
                         <div class="shop-widget">
-                            <h6 class="shop-widget-title">Filter by Brand</h6>
+                            <h6 class="shop-widget-title">Filter by Category</h6>
                             <form>
                                 <input class="shop-widget-search" type="text" placeholder="Search...">
                                 <ul class="shop-widget-list shop-widget-scroll">
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand1">
-                                            <label for="brand1">mari gold</label>
+                                            <label for="brand1">Men</label>
                                         </div>
                                         <span class="shop-widget-number">(13)</span>
                                     </li>
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand2">
-                                            <label for="brand2">tredar</label>
+                                            <label for="brand2">Ladies</label>
                                         </div>
                                         <span class="shop-widget-number">(28)</span>
                                     </li>
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand3">
-                                            <label for="brand3">keya</label>
+                                            <label for="brand3">Kids</label>
                                         </div>
                                         <span class="shop-widget-number">(35)</span>
                                     </li>
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand4">
-                                            <label for="brand4">diamond</label>
+                                            <label for="brand4">Teens</label>
                                         </div>
                                         <span class="shop-widget-number">(47)</span>
                                     </li>
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand5">
-                                            <label for="brand5">lilly's</label>
+                                            <label for="brand5">Official</label>
                                         </div>
                                         <span class="shop-widget-number">(59)</span>
                                     </li>
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand6">
-                                            <label for="brand6">fremant</label>
+                                            <label for="brand6">School</label>
                                         </div>
                                         <span class="shop-widget-number">(64)</span>
                                     </li>
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand7">
-                                            <label for="brand7">avocads</label>
+                                            <label for="brand7">Campus</label>
                                         </div>
                                         <span class="shop-widget-number">(77)</span>
                                     </li>
                                     <li>
                                         <div class="shop-widget-content">
                                             <input type="checkbox" id="brand8">
-                                            <label for="brand8">boroclas</label>
+                                            <label for="brand8">Casual</label>
                                         </div>
                                         <span class="shop-widget-number">(85)</span>
                                     </li>
