--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -1763,7 +1763,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-btn-25">
-                            <a href="shop-4column.html" class="btn btn-outline">
+                            <a href="#" class="btn btn-outline">
                                 <i class="fas fa-eye"></i>
                                 <span>Show More</span>
                             </a>
