--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -237,7 +237,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-btn-25">
-                            <a href="shop-4column.html" class="btn btn-outline">
+                            <a href="#" class="btn btn-outline">
                                 <i class="fas fa-eye"></i>
                                 <span>view all related</span>
                             </a>
