added some views related to products and also modified home.html

--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -366,161 +366,97 @@
                         </ul>
                     </div>
                 </div>
+        
+                <!-- Top Order Tab -->
                 <div class="tab-pane fade show active" id="top-order">
                     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
+                        {% for product in top_order_products %}
                         <div class="col">
                             <div class="product-card">
                                 <div class="product-media">
                                     <div class="product-label">
-                                        <label class="label-text order">314</label>
+                                        <label class="label-text order">{{ product.order_count }}</label>
                                     </div>
-                                    <button class="product-wish wish">
-                                        <i class="fas fa-heart"></i>
-                                    </button>
-                                    <a class="product-image" href="product-video.html">
-                                        <img src="images/product/01.jpg" alt="product">
+                                    <a class="product-image" href="#">
+                                        <img src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
-                                    <div class="product-widget">
-                                        <a title="Product Compare" href="#" class="fas fa-random"></a>
-                                        <a title="Product Video" href="https://youtu.be/9xzcVxSBbG8" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
-                                        <a title="Product View" href="#" class="fas fa-eye" data-bs-toggle="modal" data-bs-target="#product-view"></a>
-                                    </div>
                                 </div>
                                 <div class="product-content">
-                                    <div class="product-rating">
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="icofont-star"></i>
-                                        <a href="product-video.html">(3)</a>
-                                    </div>
                                     <h6 class="product-name">
-                                        <a href="product-video.html">fresh green chilis</a>
+                                        <a href="#">{{ product.name }}</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>ksh 34</del>
-                                        <span> 28<small>/piece</small></span>
+                                        {% if product.discount %}
+                                        <del>{{ product.original_price }}</del>
+                                        {% endif %}
+                                        <span>{{ product.discounted_price }}</span>
                                     </h6>
-                                    <button class="product-add" title="Add to Cart">
-                                        <i class="fas fa-shopping-basket"></i>
-                                        <span>add</span>
-                                    </button>
-                                    <div class="product-action">
-                                        <button class="action-minus" title="Quantity Minus"><i class="icofont-minus"></i></button>
-                                        <input class="action-input" title="Quantity Number" type="text" name="quantity" value="1">
-                                        <button class="action-plus" title="Quantity Plus"><i class="icofont-plus"></i></button>
-                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>      
-                        
-
-                <div class="tab-pane fade" id="top-rate">
-                    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-                        <div class="col">
-                            <div class="product-card">
-                                <div class="product-media">
-                                    <div class="product-label">
-                                        <label class="label-text rate">4.8</label>
-                                    </div>
-                                    <button class="product-wish wish">
-                                        <i class="fas fa-heart"></i>
-                                    </button>
-                                    <a class="product-image" href="product-video.html">
-                                        <img src="images/product/11.jpg" alt="product">
-                                    </a>
-                                    <div class="product-widget">
-                                        <a title="Product Compare" href="#" class="fas fa-random"></a>
-                                        <a title="Product Video" href="https://youtu.be/9xzcVxSBbG8" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
-                                        <a title="Product View" href="#" class="fas fa-eye" data-bs-toggle="modal" data-bs-target="#product-view"></a>
-                                    </div>
-                                </div>
-                                <div class="product-content">
-                                    <div class="product-rating">
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="icofont-star"></i>
-                                        <a href="product-video.html">(3)</a>
-                                    </div>
-                                    <h6 class="product-name">
-                                        <a href="product-video.html">fresh green chilis</a>
-                                    </h6>
-                                    <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
-                                    </h6>
-                                    <button class="product-add" title="Add to Cart">
-                                        <i class="fas fa-shopping-basket"></i>
-                                        <span>add</span>
-                                    </button>
-                                    <div class="product-action">
-                                        <button class="action-minus" title="Quantity Minus"><i class="icofont-minus"></i></button>
-                                        <input class="action-input" title="Quantity Number" type="text" name="quantity" value="1">
-                                        <button class="action-plus" title="Quantity Plus"><i class="icofont-plus"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
-   
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
-
-                <div class="tab-pane fade" id="top-disc">
+        
+                <!-- Top Rating Tab -->
+                <div class="tab-pane fade" id="top-rate">
                     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-                        
+                        {% for product in top_rating_products %}
                         <div class="col">
                             <div class="product-card">
                                 <div class="product-media">
                                     <div class="product-label">
-                                        <label class="label-text off">-10%</label>
+                                        <label class="label-text rate">{{ product.rating }}</label>
                                     </div>
-                                    <button class="product-wish wish">
-                                        <i class="fas fa-heart"></i>
-                                    </button>
-                                    <a class="product-image" href="product-video.html">
-                                        <img src="images/product/15.jpg" alt="product">
+                                    <a class="product-image" href="#">
+                                        <img src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
-                                    <div class="product-widget">
-                                        <a title="Product Compare" href="#" class="fas fa-random"></a>
-                                        <a title="Product Video" href="https://youtu.be/9xzcVxSBbG8" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
-                                        <a title="Product View" href="#" class="fas fa-eye" data-bs-toggle="modal" data-bs-target="#product-view"></a>
-                                    </div>
                                 </div>
                                 <div class="product-content">
-                                    <div class="product-rating">
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="active icofont-star"></i>
-                                        <i class="icofont-star"></i>
-                                        <a href="product-video.html">(3)</a>
-                                    </div>
                                     <h6 class="product-name">
-                                        <a href="product-video.html">fresh green chilis</a>
+                                        <a href="#">{{ product.name }}</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        {% if product.discount %}
+                                        <del>{{ product.original_price }}</del>
+                                        {% endif %}
+                                        <span>{{ product.discounted_price }}</span>
                                     </h6>
-                                    <button class="product-add" title="Add to Cart">
-                                        <i class="fas fa-shopping-basket"></i>
-                                        <span>add</span>
-                                    </button>
-                                    <div class="product-action">
-                                        <button class="action-minus" title="Quantity Minus"><i class="icofont-minus"></i></button>
-                                        <input class="action-input" title="Quantity Number" type="text" name="quantity" value="1">
-                                        <button class="action-plus" title="Quantity Plus"><i class="icofont-plus"></i></button>
-                                    </div>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
+                    </div>
+                </div>
+        
+                <!-- Top Discount Tab -->
+                <div class="tab-pane fade" id="top-disc">
+                    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
+                        {% for product in top_discount_products %}
+                        <div class="col">
+                            <div class="product-card">
+                                <div class="product-media">
+                                    <div class="product-label">
+                                        <label class="label-text off">{{ product.discount|floatformat:0 }}%</label>
+                                    </div>
+                                    <a class="product-image" href="#">
+                                        <img src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    </a>
+                                </div>
+                                <div class="product-content">
+                                    <h6 class="product-name">
+                                        <a href="#">{{ product.name }}</a>
+                                    </h6>
+                                    <h6 class="product-price">
+                                        {% if product.discount %}
+                                        <del>{{ product.original_price }}</del>
+                                        {% endif %}
+                                        <span>{{ product.discounted_price }}</span>
+                                    </h6>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="row">
@@ -535,6 +471,8 @@
                 </div>
             </div>
         </section>
+        
+      
         <!--=====================================
                     NICHE PART END
         =======================================-->
