--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -377,13 +377,13 @@
                                     <div class="product-label">
                                         <label class="label-text order">{{ product.order_count }}</label>
                                     </div>
-                                    <a class="product-image" href="#">
+                                    <a class="product-image" href="{% url 'product:product-detail' product.slug %}">
                                         <img src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
                                 </div>
                                 <div class="product-content">
                                     <h6 class="product-name">
-                                        <a href="#">{{ product.name }}</a>
+                                        <a href="{% url 'product:product-detail' product.slug %}">{{ product.name }}</a>
                                     </h6>
                                     <h6 class="product-price">
                                         {% if product.discount %}
@@ -408,13 +408,13 @@
                                     <div class="product-label">
                                         <label class="label-text rate">{{ product.rating }}</label>
                                     </div>
-                                    <a class="product-image" href="#">
+                                    <a class="product-image" href="{% url 'product:product-detail' product.slug %}">
                                         <img src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
                                 </div>
                                 <div class="product-content">
                                     <h6 class="product-name">
-                                        <a href="#">{{ product.name }}</a>
+                                        <a href="{% url 'product:product-detail' product.slug %}">{{ product.name }}</a>
                                     </h6>
                                     <h6 class="product-price">
                                         {% if product.discount %}
@@ -439,13 +439,13 @@
                                     <div class="product-label">
                                         <label class="label-text off">{{ product.discount|floatformat:0 }}%</label>
                                     </div>
-                                    <a class="product-image" href="#">
+                                    <a class="product-image" href="{% url 'product:product-detail' product.slug %}">
                                         <img src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
                                 </div>
                                 <div class="product-content">
                                     <h6 class="product-name">
-                                        <a href="#">{{ product.name }}</a>
+                                        <a href="{% url 'product:product-detail' product.slug %}">{{ product.name }}</a>
                                     </h6>
                                     <h6 class="product-price">
                                         {% if product.discount %}
