modified some files on 8th januray

--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -276,9 +276,9 @@
                                         </select>
                                     </div>
                                     <div class="filter-action">
-                                        <a href="shop-3column.html" title="Three Column"><i class="fas fa-th"></i></a>
-                                        <a href="shop-2column.html" title="Two Column"><i class="fas fa-th-large"></i></a>
-                                        <a href="shop-1column.html" title="One Column"><i class="fas fa-th-list"></i></a>
+                                        <a href="#" title="Three Column"><i class="fas fa-th"></i></a>
+                                        <a href="#" title="Two Column"><i class="fas fa-th-large"></i></a>
+                                        <a href="#" title="One Column"><i class="fas fa-th-list"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -302,7 +302,7 @@
                                             <img src="{{object.image.url}}" style= "width:178px; height:235px"  alt="product">
                                         </a>
                                         <div class="product-widget">
-                                            <a title="Product Compare" href="compare.html" class="fas fa-random"></a>
+                                            <a title="Product Compare" href="#" class="fas fa-random"></a>
                                             <a title="Product Video" href="https://youtu.be/9xzcVxSBbG8" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
                                             <a title="Product View" href="#" class="fas fa-eye" data-bs-toggle="modal" data-bs-target="#product-view"></a>
                                         </div>
