--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         =======================================-->
 
         <!-- WEBPAGE TITLE -->
-        <title> Yuvaa Fashonna | Home </title>
+        <title> Yuvaa Fashonna | 2025 </title>
 
         <!--=====================================
                     CSS LINK PART START
