--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -228,7 +228,7 @@
                                 <label for="checkout-check">By making this purchase you agree to our <a href="#">Terms and Conditions</a>.</label>
                             </div>
                             <div class="checkout-proced">
-                                <a href="#" class="btn btn-inline">proced to checkout</a>
+                                <a href="{% url 'orders:order_summary'%}" class="btn btn-inline">proced to checkout</a>
                             </div>
                         </div>
                     </div>
